--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "intl": "^1.2.5",
+    "luxon": "^2.3.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-elements": "^3.4.2",
+    "react-native-fast-image": "^8.5.11",
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
